--- a/index.html
+++ b/index.html
@@ -146,24 +146,25 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">University of Colorado Boulder</h3>
-            <div class="subheading mb-3">Bachelor of Science</div>
-            <div>Computer Science - Web Development Track</div>
-            <p>GPA: 3.23</p>
+            <h3 class="mb-0">University of Maryland, Baltimore county</h3>
+            <div class="subheading mb-3">Masters</div>
+            <div>Data Science</div>
+            <p>GPA: 4.0</p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2006 - May 2010</span>
+            <span class="text-primary">January 2019 - December 2020</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
           <div class="resume-content">
-            <h3 class="mb-0">James Buchanan High School</h3>
-            <div class="subheading mb-3">Technology Magnet Program</div>
-            <p>GPA: 3.56</p>
+            <h3 class="mb-0">West Bengal University of Technology</h3>
+            <div class="subheading mb-3">Bachelors</div>
+            <div>Computer Science</div>
+            <p>GPA: 3.5</p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2002 - May 2006</span>
+            <span class="text-primary">2006 - 2010</span>
           </div>
         </div>
 
