--- a/index.html
+++ b/index.html
@@ -147,8 +147,7 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">University of Maryland, Baltimore county</h3>
-            <div class="subheading mb-3">Masters</div>
-            <div>Data Science</div>
+            <div class="subheading mb-3">Masters - Data Science</div>
             <p>GPA: 4.0</p>
           </div>
           <div class="resume-date text-md-right">
@@ -159,8 +158,7 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
           <div class="resume-content">
             <h3 class="mb-0">West Bengal University of Technology</h3>
-            <div class="subheading mb-3">Bachelors</div>
-            <div>Computer Science</div>
+            <div class="subheading mb-3">Bachelors - Computer Science</div>
             <p>GPA: 3.5</p>
           </div>
           <div class="resume-date text-md-right">
