--- a/index.html
+++ b/index.html
@@ -69,7 +69,9 @@
         <div class="subheading mb-5">1000 Hilltop Cir. · Baltimore, MD 21250 ·
           <a href="mailto:sofiad1@umbc.edu">sofiad1@umbc.edu</a>
         </div>
-        <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+        <p class="lead mb-5">Currently an aspiring Data Scientist and Graduate Student at University of Maryland, Baltimore County.
+
+          I was a Software Developer and Data Analyst for Tata Consultancy Services the past seven years. </p>
         <div class="social-icons">
           <a href="https://www.linkedin.com/in/sofiadutta/">
             <i class="fab fa-linkedin-in"></i>
