--- a/index.html
+++ b/index.html
@@ -67,7 +67,8 @@
           <span class="text-primary">Dutta</span>
         </h1>
         <div class="subheading mb-5">1000 Hilltop Cir. · Baltimore, MD 21250 ·
-          <a href="mailto:sofiad1@umbc.edu">sofiad1@umbc.edu</a>
+          <a href="mailto:sofiad1@umbc.edu">sofiad1@umbc.edu</a> ·
+          <a href="resume-sofia-dutta.pdf">Resume pdf</a>
         </div>
         <p class="lead mb-5">Currently an aspiring Data Scientist and Graduate Student at University of Maryland, Baltimore County.
 
