--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">Clarence Taylor</span>
+      <span class="d-block d-lg-none">Sofia Dutta</span>
       <span class="d-none d-lg-block">
         <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profile.jpg" alt="">
       </span>
@@ -92,50 +92,55 @@
     <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="experience">
       <div class="w-100">
         <h2 class="mb-5">Experience</h2>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
-          <div class="resume-content">
-            <h3 class="mb-0">Senior Web Developer</h3>
-            <div class="subheading mb-3">Intelitec Solutions</div>
-            <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">March 2013 - Present</span>
-          </div>
+        <p>Work in progress...</p>
+        <div class="img-thumbnail">
+          <img src="img/wip.svg" height="200" width="200">
         </div>
 
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
-          <div class="resume-content">
-            <h3 class="mb-0">Web Developer</h3>
-            <div class="subheading mb-3">Intelitec Solutions</div>
-            <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">December 2011 - March 2013</span>
-          </div>
-        </div>
 
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
-          <div class="resume-content">
-            <h3 class="mb-0">Junior Web Designer</h3>
-            <div class="subheading mb-3">Shout! Media Productions</div>
-            <p>Podcasting operational change management inside of workflows to establish a framework. Taking seamless key performance indicators offline to maximise the long tail. Keeping your eye on the ball while performing a deep dive on the start-up mentality to derive convergence on cross-platform integration.</p>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">July 2010 - December 2011</span>
-          </div>
-        </div>
+<!--        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">-->
+<!--          <div class="resume-content">-->
+<!--            <h3 class="mb-0">Senior Web Developer</h3>-->
+<!--            <div class="subheading mb-3">Intelitec Solutions</div>-->
+<!--            <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>-->
+<!--          </div>-->
+<!--          <div class="resume-date text-md-right">-->
+<!--            <span class="text-primary">March 2013 - Present</span>-->
+<!--          </div>-->
+<!--        </div>-->
 
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
-          <div class="resume-content">
-            <h3 class="mb-0">Web Design Intern</h3>
-            <div class="subheading mb-3">Shout! Media Productions</div>
-            <p>Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.</p>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">September 2008 - June 2010</span>
-          </div>
-        </div>
+<!--        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">-->
+<!--          <div class="resume-content">-->
+<!--            <h3 class="mb-0">Web Developer</h3>-->
+<!--            <div class="subheading mb-3">Intelitec Solutions</div>-->
+<!--            <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>-->
+<!--          </div>-->
+<!--          <div class="resume-date text-md-right">-->
+<!--            <span class="text-primary">December 2011 - March 2013</span>-->
+<!--          </div>-->
+<!--        </div>-->
+
+<!--        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">-->
+<!--          <div class="resume-content">-->
+<!--            <h3 class="mb-0">Junior Web Designer</h3>-->
+<!--            <div class="subheading mb-3">Shout! Media Productions</div>-->
+<!--            <p>Podcasting operational change management inside of workflows to establish a framework. Taking seamless key performance indicators offline to maximise the long tail. Keeping your eye on the ball while performing a deep dive on the start-up mentality to derive convergence on cross-platform integration.</p>-->
+<!--          </div>-->
+<!--          <div class="resume-date text-md-right">-->
+<!--            <span class="text-primary">July 2010 - December 2011</span>-->
+<!--          </div>-->
+<!--        </div>-->
+
+<!--        <div class="resume-item d-flex flex-column flex-md-row justify-content-between">-->
+<!--          <div class="resume-content">-->
+<!--            <h3 class="mb-0">Web Design Intern</h3>-->
+<!--            <div class="subheading mb-3">Shout! Media Productions</div>-->
+<!--            <p>Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.</p>-->
+<!--          </div>-->
+<!--          <div class="resume-date text-md-right">-->
+<!--            <span class="text-primary">September 2008 - June 2010</span>-->
+<!--          </div>-->
+<!--        </div>-->
 
       </div>
 
@@ -177,62 +182,66 @@
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="skills">
       <div class="w-100">
         <h2 class="mb-5">Skills</h2>
+        <p>Work in progress...</p>
+        <div class="img-thumbnail">
+          <img src="img/wip.svg" height="200" width="200">
+        </div>
 
-        <div class="subheading mb-3">Programming Languages &amp; Tools</div>
-        <ul class="list-inline dev-icons">
-          <li class="list-inline-item">
-            <i class="fab fa-html5"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-css3-alt"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-js-square"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-angular"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-react"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-node-js"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-sass"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-less"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-wordpress"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-gulp"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-grunt"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-npm"></i>
-          </li>
-        </ul>
+<!--        <div class="subheading mb-3">Programming Languages &amp; Tools</div>-->
+<!--        <ul class="list-inline dev-icons">-->
+<!--          <li class="list-inline-item">-->
+<!--            <i class="fab fa-html5"></i>-->
+<!--          </li>-->
+<!--          <li class="list-inline-item">-->
+<!--            <i class="fab fa-css3-alt"></i>-->
+<!--          </li>-->
+<!--          <li class="list-inline-item">-->
+<!--            <i class="fab fa-js-square"></i>-->
+<!--          </li>-->
+<!--          <li class="list-inline-item">-->
+<!--            <i class="fab fa-angular"></i>-->
+<!--          </li>-->
+<!--          <li class="list-inline-item">-->
+<!--            <i class="fab fa-react"></i>-->
+<!--          </li>-->
+<!--          <li class="list-inline-item">-->
+<!--            <i class="fab fa-node-js"></i>-->
+<!--          </li>-->
+<!--          <li class="list-inline-item">-->
+<!--            <i class="fab fa-sass"></i>-->
+<!--          </li>-->
+<!--          <li class="list-inline-item">-->
+<!--            <i class="fab fa-less"></i>-->
+<!--          </li>-->
+<!--          <li class="list-inline-item">-->
+<!--            <i class="fab fa-wordpress"></i>-->
+<!--          </li>-->
+<!--          <li class="list-inline-item">-->
+<!--            <i class="fab fa-gulp"></i>-->
+<!--          </li>-->
+<!--          <li class="list-inline-item">-->
+<!--            <i class="fab fa-grunt"></i>-->
+<!--          </li>-->
+<!--          <li class="list-inline-item">-->
+<!--            <i class="fab fa-npm"></i>-->
+<!--          </li>-->
+<!--        </ul>-->
 
-        <div class="subheading mb-3">Workflow</div>
-        <ul class="fa-ul mb-0">
-          <li>
-            <i class="fa-li fa fa-check"></i>
-            Mobile-First, Responsive Design</li>
-          <li>
-            <i class="fa-li fa fa-check"></i>
-            Cross Browser Testing &amp; Debugging</li>
-          <li>
-            <i class="fa-li fa fa-check"></i>
-            Cross Functional Teams</li>
-          <li>
-            <i class="fa-li fa fa-check"></i>
-            Agile Development &amp; Scrum</li>
-        </ul>
+<!--        <div class="subheading mb-3">Workflow</div>-->
+<!--        <ul class="fa-ul mb-0">-->
+<!--          <li>-->
+<!--            <i class="fa-li fa fa-check"></i>-->
+<!--            Mobile-First, Responsive Design</li>-->
+<!--          <li>-->
+<!--            <i class="fa-li fa fa-check"></i>-->
+<!--            Cross Browser Testing &amp; Debugging</li>-->
+<!--          <li>-->
+<!--            <i class="fa-li fa fa-check"></i>-->
+<!--            Cross Functional Teams</li>-->
+<!--          <li>-->
+<!--            <i class="fa-li fa fa-check"></i>-->
+<!--            Agile Development &amp; Scrum</li>-->
+<!--        </ul>-->
       </div>
     </section>
 
@@ -241,8 +250,13 @@
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="interests">
       <div class="w-100">
         <h2 class="mb-5">Interests</h2>
-        <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
-        <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p>
+        <p>Work in progress...</p>
+        <div class="img-thumbnail">
+          <img src="img/wip.svg" height="200" width="200">
+        </div>
+
+        <!--        <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>-->
+<!--        <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p>-->
       </div>
     </section>
 
@@ -251,34 +265,39 @@
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="awards">
       <div class="w-100">
         <h2 class="mb-5">Awards &amp; Certifications</h2>
-        <ul class="fa-ul mb-0">
-          <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            Google Analytics Certified Developer</li>
-          <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            Mobile Web Specialist - Google Certification</li>
-          <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            1<sup>st</sup>
-            Place - University of Colorado Boulder - Emerging Tech Competition 2009</li>
-          <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            1<sup>st</sup>
-            Place - University of Colorado Boulder - Adobe Creative Jam 2008 (UI Design Category)</li>
-          <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            2<sup>nd</sup>
-            Place - University of Colorado Boulder - Emerging Tech Competition 2008</li>
-          <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            1<sup>st</sup>
-            Place - James Buchanan High School - Hackathon 2006</li>
-          <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            3<sup>rd</sup>
-            Place - James Buchanan High School - Hackathon 2005</li>
-        </ul>
+        <p>Work in progress...</p>
+        <div class="img-thumbnail">
+          <img src="img/wip.svg" height="200" width="200">
+        </div>
+
+        <!--        <ul class="fa-ul mb-0">-->
+<!--          <li>-->
+<!--            <i class="fa-li fa fa-trophy text-warning"></i>-->
+<!--            Google Analytics Certified Developer</li>-->
+<!--          <li>-->
+<!--            <i class="fa-li fa fa-trophy text-warning"></i>-->
+<!--            Mobile Web Specialist - Google Certification</li>-->
+<!--          <li>-->
+<!--            <i class="fa-li fa fa-trophy text-warning"></i>-->
+<!--            1<sup>st</sup>-->
+<!--            Place - University of Colorado Boulder - Emerging Tech Competition 2009</li>-->
+<!--          <li>-->
+<!--            <i class="fa-li fa fa-trophy text-warning"></i>-->
+<!--            1<sup>st</sup>-->
+<!--            Place - University of Colorado Boulder - Adobe Creative Jam 2008 (UI Design Category)</li>-->
+<!--          <li>-->
+<!--            <i class="fa-li fa fa-trophy text-warning"></i>-->
+<!--            2<sup>nd</sup>-->
+<!--            Place - University of Colorado Boulder - Emerging Tech Competition 2008</li>-->
+<!--          <li>-->
+<!--            <i class="fa-li fa fa-trophy text-warning"></i>-->
+<!--            1<sup>st</sup>-->
+<!--            Place - James Buchanan High School - Hackathon 2006</li>-->
+<!--          <li>-->
+<!--            <i class="fa-li fa fa-trophy text-warning"></i>-->
+<!--            3<sup>rd</sup>-->
+<!--            Place - James Buchanan High School - Hackathon 2005</li>-->
+<!--        </ul>-->
       </div>
     </section>
 
