modified:   index.html

--- a/index.html
+++ b/index.html
@@ -122,22 +122,22 @@
 								</div>
 							</div>
 							<div class="row">
-								<div class="col-md-3 animate-box" data-animate-effect="fadeInLeft">
+								<div class="col-md-4 animate-box" data-animate-effect="fadeInLeft">
+									<div class="services color-4">
+										<span class="icon2"><i class="icon-lab2"></i></span>
+										<h3>Data Science</h3>
+									</div>
+								</div>
+								<div class="col-md-4 animate-box" data-animate-effect="fadeInLeft">
 									<div class="services color-1">
 										<span class="icon2"><i class="icon-data"></i></span>
 										<h3>Big Data Analytics</h3>
 									</div>
 								</div>
-								<div class="col-md-3 animate-box" data-animate-effect="fadeInRight">
+								<div class="col-md-4 animate-box" data-animate-effect="fadeInRight">
 									<div class="services color-2">
 										<span class="icon2"><i class="icon-flash"></i></span>
 										<h3>Machine Learning</h3>
-									</div>
-								</div>
-								<div class="col-md-3 animate-box" data-animate-effect="fadeInTop">
-									<div class="services color-3">
-										<span class="icon2"><i class="icon-code"></i></span>
-										<h3>Software Development</h3>
 									</div>
 								</div>
 							</div>
