modified:   css/style.css

--- a/index.html
+++ b/index.html
@@ -277,49 +277,49 @@
 							<div class="progress-wrap">
 								<h3>Python</h3>
 								<div class="progress">
-								 	<div class="progress-bar color-1" role="progressbar" aria-valuenow="75"
-								  	aria-valuemin="0" aria-valuemax="100" style="width:75%">
-								    <span>75%</span>
-								  	</div>
-								</div>
-							</div>
-						</div>
-						<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
-							<div class="progress-wrap">
-								<h3>Keras</h3>
-								<div class="progress">
-								 	<div class="progress-bar color-2" role="progressbar" aria-valuenow="60"
-								  	aria-valuemin="0" aria-valuemax="100" style="width:60%">
-								    <span>60%</span>
-								  	</div>
-								</div>
-							</div>
-						</div>
-						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
-							<div class="progress-wrap">
-								<h3>Sci-kit Learn</h3>
-								<div class="progress">
-								 	<div class="progress-bar color-3" role="progressbar" aria-valuenow="85"
-								  	aria-valuemin="0" aria-valuemax="100" style="width:85%">
-								    <span>85%</span>
-								  	</div>
-								</div>
-							</div>
-						</div>
-						<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
-							<div class="progress-wrap">
-								<h3>PySpark</h3>
-								<div class="progress">
-								 	<div class="progress-bar color-4" role="progressbar" aria-valuenow="90"
+								 	<div class="progress-bar color-1" role="progressbar" aria-valuenow="90"
 								  	aria-valuemin="0" aria-valuemax="100" style="width:90%">
 								    <span>90%</span>
 								  	</div>
 								</div>
 							</div>
 						</div>
+						<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
+							<div class="progress-wrap">
+								<h3>Java</h3>
+								<div class="progress">
+									<div class="progress-bar color-2" role="progressbar" aria-valuenow="75"
+										 aria-valuemin="0" aria-valuemax="100" style="width:75%">
+										<span>75%</span>
+									</div>
+								</div>
+							</div>
+						</div>
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
 							<div class="progress-wrap">
-								<h3>MLlib</h3>
+								<h3>Keras</h3>
+								<div class="progress">
+								 	<div class="progress-bar color-3" role="progressbar" aria-valuenow="70"
+								  	aria-valuemin="0" aria-valuemax="100" style="width:70%">
+								    <span>70%</span>
+								  	</div>
+								</div>
+							</div>
+						</div>
+						<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
+							<div class="progress-wrap">
+								<h3>Sci-kit Learn</h3>
+								<div class="progress">
+								 	<div class="progress-bar color-4" role="progressbar" aria-valuenow="85"
+								  	aria-valuemin="0" aria-valuemax="100" style="width:85%">
+								    <span>85%</span>
+								  	</div>
+								</div>
+							</div>
+						</div>
+						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
+							<div class="progress-wrap">
+								<h3>PyTorch</h3>
 								<div class="progress">
 								 	<div class="progress-bar color-5" role="progressbar" aria-valuenow="70"
 								  	aria-valuemin="0" aria-valuemax="100" style="width:70%">
@@ -330,11 +330,55 @@
 						</div>
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
 							<div class="progress-wrap">
+								<h3>Tensorflow</h3>
+								<div class="progress">
+									<div class="progress-bar color-6" role="progressbar" aria-valuenow="70"
+										 aria-valuemin="0" aria-valuemax="100" style="width:70%">
+										<span>70%</span>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
+							<div class="progress-wrap">
+								<h3>MLlib</h3>
+								<div class="progress">
+								 	<div class="progress-bar color-7" role="progressbar" aria-valuenow="70"
+								  	aria-valuemin="0" aria-valuemax="100" style="width:70%">
+								    <span>70%</span>
+								  	</div>
+								</div>
+							</div>
+						</div>
+						<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
+							<div class="progress-wrap">
+								<h3>PySpark</h3>
+								<div class="progress">
+									<div class="progress-bar color-8" role="progressbar" aria-valuenow="90"
+										 aria-valuemin="0" aria-valuemax="100" style="width:90%">
+										<span>90%</span>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
+							<div class="progress-wrap">
+								<h3>TSQL, Oracle SQL, PL/SQL</h3>
+								<div class="progress">
+									<div class="progress-bar color-9" role="progressbar" aria-valuenow="95"
+										 aria-valuemin="0" aria-valuemax="100" style="width:95%">
+										<span>95%</span>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
+							<div class="progress-wrap">
 								<h3>Oracle Apps, Oracle Fusion</h3>
 								<div class="progress">
-								 	<div class="progress-bar color-6" role="progressbar" aria-valuenow="80"
-								  	aria-valuemin="0" aria-valuemax="100" style="width:80%">
-								    <span>80%</span>
+								 	<div class="progress-bar color-10" role="progressbar" aria-valuenow="90"
+								  	aria-valuemin="0" aria-valuemax="100" style="width:90%">
+								    <span>90%</span>
 								  	</div>
 								</div>
 							</div>
@@ -343,7 +387,7 @@
 							<div class="progress-wrap">
 								<h3>Google Cloud</h3>
 								<div class="progress">
-									<div class="progress-bar color-7" role="progressbar" aria-valuenow="70"
+									<div class="progress-bar color-11" role="progressbar" aria-valuenow="70"
 										 aria-valuemin="0" aria-valuemax="100" style="width:70%">
 										<span>70%</span>
 									</div>
@@ -354,9 +398,31 @@
 							<div class="progress-wrap">
 								<h3>AWS S3</h3>
 								<div class="progress">
-									<div class="progress-bar color-8" role="progressbar" aria-valuenow="80"
-										 aria-valuemin="0" aria-valuemax="100" style="width:80%">
-										<span>80%</span>
+									<div class="progress-bar color-12" role="progressbar" aria-valuenow="70"
+										 aria-valuemin="0" aria-valuemax="100" style="width:70%">
+										<span>70%</span>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
+							<div class="progress-wrap">
+								<h3>Knowledge Graph</h3>
+								<div class="progress">
+									<div class="progress-bar color-13" role="progressbar" aria-valuenow="85"
+										 aria-valuemin="0" aria-valuemax="100" style="width:85%">
+										<span>85%</span>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
+							<div class="progress-wrap">
+								<h3>OWL, SPARQL</h3>
+								<div class="progress">
+									<div class="progress-bar color-14" role="progressbar" aria-valuenow="90"
+										 aria-valuemin="0" aria-valuemax="100" style="width:90%">
+										<span>90%</span>
 									</div>
 								</div>
 							</div>
@@ -385,7 +451,7 @@
 									    </div>
 									    <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
 									         <div class="panel-body">
-												 <p>Working on my Master's in Data Science from <a href="https://umbc.edu" target="_blank">University of Maryland, Baltimore County</a>, Baltimore, USA. First year GPA: <strong>4.0</strong>! See transcript <a href="assets/ds_transcript.pdf" target="_blank">here</a>.</p>
+												 <p><strong>2020 - 2019</strong></br>Working on my Master's in Data Science from <a href="https://umbc.edu" target="_blank">University of Maryland, Baltimore County</a>, Baltimore, USA. First year GPA: <strong>4.0</strong>!</br>See transcript <a href="assets/ds_transcript.pdf" target="_blank">here</a>.</p>
 									         </div>
 									    </div>
 									</div>
@@ -398,7 +464,7 @@
 									    </div>
 									    <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
 									        <div class="panel-body">
-												<p>Completed my Bachelor of Engineering in Computer Science from <a href="https://makautwb.ac.in" target="_blank">West Bengal University of Technology</a>, Kolkata, India with a <strong>3.5</strong> GPA! See transcript <a href="assets/ug_transcript.pdf" target="_blank">here</a>.</p>
+												<p><strong>2010 - 2006</strong></br>Completed my Bachelor of Engineering in Computer Science from <a href="https://makautwb.ac.in" target="_blank">West Bengal University of Technology</a>, Kolkata, India with a <strong>3.5</strong> GPA!</br>See transcript <a href="assets/ug_transcript.pdf" target="_blank">here</a>.</p>
 									        </div>
 									    </div>
 									</div>
@@ -409,7 +475,6 @@
 				</div>
 			</section>
 
-			<!--
 			<section class="colorlib-experience" data-section="experience">
 				<div class="colorlib-narrow-content">
 					<div class="row">
@@ -429,12 +494,12 @@
 					               </div>
 
 					               <div class="timeline-label">
-					                  <h2><a href="#">Full Stack Developer</a> <span>2017-2018</span></h2>
-					                  <p>Tolerably earnestly middleton extremely distrusts she boy now not. Add and offered prepare how cordial two promise. Greatly who affixed suppose but enquire compact prepare all put. Added forth chief trees but rooms think may.</p>
+					                  <h2><a href="https://ebiquity.umbc.edu" target="_blank">Semantic Web Researcher</a> <span>Present - 2019</span></h2>
+									   <p>Researcher in Semantic Web and Smart Home Access Control, <a href="https://ebiquity.umbc.edu" target="_blank">Ebiquity Group</a>, <a href="https://www.umbc.edu" target="_blank">UMBC</a>, USA</p>
+									   <p>Working on papers in domains of Semantic Web, Context-based Access Control and Smart Home Environments.</p>
 					               </div>
 					            </div>
 					         </article>
-
 
 					         <article class="timeline-entry animate-box" data-animate-effect="fadeInRight">
 					            <div class="timeline-entry-inner">
@@ -442,44 +507,9 @@
 					                  <i class="icon-pen2"></i>
 					               </div>
 					               <div class="timeline-label">
-					               	<h2><a href="#">Front End Developer at Google Company</a> <span>2017-2018</span></h2>
-					                  <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
-					               </div>
-					            </div>
-					         </article>
-
-					         <article class="timeline-entry animate-box" data-animate-effect="fadeInLeft">
-					            <div class="timeline-entry-inner">
-					               <div class="timeline-icon color-3">
-					                  <i class="icon-pen2"></i>
-					               </div>
-					               <div class="timeline-label">
-					               	<h2><a href="#">System Analyst</a> <span>2017-2018</span></h2>
-					                  <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
-					               </div>
-					            </div>
-					         </article>
-
-					         <article class="timeline-entry animate-box" data-animate-effect="fadeInTop">
-					            <div class="timeline-entry-inner">
-					               <div class="timeline-icon color-4">
-					                  <i class="icon-pen2"></i>
-					               </div>
-					               <div class="timeline-label">
-					               	<h2><a href="#">Creative Designer</a> <span>2017-2018</span></h2>
-					                  <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
-					               </div>
-					            </div>
-					         </article>
-
-					         <article class="timeline-entry animate-box" data-animate-effect="fadeInLeft">
-					            <div class="timeline-entry-inner">
-					               <div class="timeline-icon color-5">
-					                  <i class="icon-pen2"></i>
-					               </div>
-					               <div class="timeline-label">
-					               	<h2><a href="#">UI/UX Designer at Envato</a> <span>2017-2018</span></h2>
-					                  <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
+					               	<h2><a href="https://www.tcs.com" target="_blank">Software Consultant and Data Analyst</a> <span>2018 - 2010</span></h2>
+									   <p>Software Consultant and Data Analyst at <a href="https://www.tcs.com" target="_blank">Tata Consultancy Services (TCS) Ltd.</a>, India</p>
+									   <p>Worked as a software developer and data analyst, consulting with clients of TCS to provide solutions to their data management challenges. During the seven years I was with TCS, I was a team lead and worked with nine different clients. I also received awards for my skills and completed several certifications for Oracle Apps, Oracle SQL and Oracle PL/SQL.</p>
 					               </div>
 					            </div>
 					         </article>
@@ -495,7 +525,6 @@
 				   </div>
 				</div>
 			</section>
-			-->
 
 			<section class="colorlib-contact" data-section="contact">
 				<div class="colorlib-narrow-content">
