modified:   index.html

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 								<div class="col-md-12 animate-box" data-animate-effect="fadeInLeft">
 									<div class="hire">
 										<h3>I recently completed my first year of</br>Master's in Data Science with a <strong>4.0</strong> GPA!</h3>
-										<a href="mailto:sofiad1@umbc.edu" class="btn-hire">Hire me</a>
+										<a href="mailto:sofiad1@umbc.edu" target="_blank" class="btn-hire">Hire me</a>
 									</div>
 								</div>
 							</div>
@@ -541,18 +541,9 @@
 									<i class="icon-mail6"></i>
 								</div>
 								<div class="colorlib-text">
-									<p><a href="mailto:sofiad1@umbc.edu">sofiad1@umbc.edu</a></p>
+									<p><a href="mailto:sofiad1@umbc.edu" target="_blank">sofiad1@umbc.edu</a></p>
 								</div>
 							</div>
-
-<!--							<div class="colorlib-feature colorlib-feature-sm animate-box" data-animate-effect="fadeInLeft">-->
-<!--								<div class="colorlib-icon">-->
-<!--									<i class="icon-phone"></i>-->
-<!--								</div>-->
-<!--								<div class="colorlib-text">-->
-<!--									<p><a href="tel:a_number">Call me!</a></p>-->
-<!--								</div>-->
-<!--							</div>-->
 
 							<div class="colorlib-feature colorlib-feature-sm animate-box" data-animate-effect="fadeInLeft">
 								<div class="colorlib-icon">
