modified:   index.html

--- a/index.html
+++ b/index.html
@@ -464,7 +464,7 @@
 									    </div>
 									    <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
 									        <div class="panel-body">
-												<p><strong>2010 - 2006</strong></br>Completed my Bachelor of Engineering in Computer Science from <a href="https://makautwb.ac.in" target="_blank">West Bengal University of Technology</a>, Kolkata, India with a <strong>3.5</strong> GPA!</br>See transcript <a href="assets/ug_transcript.pdf" target="_blank">here</a>.</p>
+												<p><strong>2010 - 2006</strong></br>Completed my Bachelor of Technology in Computer Science from <a href="https://makautwb.ac.in" target="_blank">West Bengal University of Technology</a>, Kolkata, India with a <strong>3.5</strong> GPA!</br>See transcript <a href="assets/ug_transcript.pdf" target="_blank">here</a>.</p>
 									        </div>
 									    </div>
 									</div>
