--- a/index.html
+++ b/index.html
@@ -509,7 +509,7 @@
 					               <div class="timeline-label">
 					               	<h2><a href="https://www.tcs.com" target="_blank">Software Consultant and Data Analyst</a> <span>2018 - 2010</span></h2>
 									   <p>Software Consultant and Data Analyst at <a href="https://www.tcs.com" target="_blank">Tata Consultancy Services (TCS) Ltd.</a>, India</p>
-									   <p>Worked as a software developer and data analyst, consulting with clients of TCS to provide solutions to their data management challenges. During the seven years I was with TCS, I was a team lead and worked with nine different clients. I also received awards for my skills and completed several certifications for Oracle Apps, Oracle SQL and Oracle PL/SQL.</p>
+									   <p>I was a team leader and software developer working on Oracle Apps, Oracle Databases and Oracle Fusion Human Capital Management functionalities. I performed software design, development and testing activities on several client projects for TCS. I carried out all tasks in the Software Development Life Cycle starting from requirement analysis to software testing and maintenance.</p>
 					               </div>
 					            </div>
 					         </article>
