--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 					   				<div class="slider-text-inner js-fullheight">
 					   					<div class="desc">
 						   					<h1>Hi! <br>I'm Sofia</h1>
-						   					<h2>An aspiring Data Scientist and<br>Machine Learning Engineer!</h2>
+						   					<h2>A software developer with a knack for data science,<br>machine learning and deep learning!</h2>
 												<p><a class="btn btn-primary btn-learn" href="resume-sofia-dutta.pdf" target="_blank">Download Resume <i class="icon-download4"></i></a></p>
 											</div>
 					   				</div>
