--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 					<a href="https://www.linkedin.com/in/sofiadutta" target="_blank"><i class="icon-linkedin22"></i></a> |
 					<a href="https://github.com/sofiadutta" target="_blank"><i class="icon-github"></i></a> |
 					<a href="https://twitter.com/dutta_sofia" target="_blank"><i class="icon-twitter2"></i></a> |
-					<a href="https://scholar.google.com/citations?user=xdlmrWYAAAAJ&hl=en target="_blank"><i class="icon-graduation-cap"></i></a>
+					<a href="https://scholar.google.com/citations?user=xdlmrWYAAAAJ&hl=en target="_blank"><i class="icon-study"></i></a>
 				</p>
 			</div>
 
