--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 							<div class="row">
 								<div class="col-md-12 animate-box" data-animate-effect="fadeInLeft">
 									<div class="hire">
-										<h3>I recently completed my first year of</br>Master's in Data Science with a <strong>4.0</strong> GPA!</h3>
+										<h3>Master's in Data Science with a <strong>4.0</strong> GPA!</h3>
 										<a href="mailto:sofiad1@umbc.edu" target="_blank" class="btn-hire">Hire me</a>
 									</div>
 								</div>
@@ -452,7 +452,7 @@
 									    </div>
 									    <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
 									         <div class="panel-body">
-												 <p><strong>2020 - 2019</strong></br>Working on my Master's in Data Science from <a href="https://umbc.edu" target="_blank">University of Maryland, Baltimore County</a>, Baltimore, USA. First year GPA: <strong>4.0</strong>!</br>See transcript <a href="assets/ds_transcript.pdf" target="_blank">here</a>.</p>
+												 <p><strong>2020 - 2019</strong></br>Working on my Master's in Data Science from <a href="https://umbc.edu" target="_blank">University of Maryland, Baltimore County</a>, Baltimore, USA. GPA: <strong>4.0</strong>!</br>See transcript <a href="assets/ds_transcript.pdf" target="_blank">here</a>.</p>
 									         </div>
 									    </div>
 									</div>
