modified:   index.html

--- a/index.html
+++ b/index.html
@@ -65,6 +65,8 @@
 						<li class="active"><a href="#" data-nav-section="home">Home</a></li>
 						<li><a href="#" data-nav-section="about">About</a></li>
 						<li><a href="#" data-nav-section="projects">Projects</a></li>
+						<li><a href="#" data-nav-section="publications">Publications</a></li>
+						<li><a href="#" data-nav-section="android">Android: Fun and research</a></li>
 						<li><a href="#" data-nav-section="skills">Skills</a></li>
 						<li><a href="#" data-nav-section="education">Education</a></li>
 						<li><a href="#" data-nav-section="experience">Experience</a></li>
@@ -260,6 +262,108 @@
 					</div>
 				</div>
 			</div>
+
+			<section class="colorlib-publications" data-section="publications">
+				<div class="colorlib-narrow-content">
+					<div class="row">
+						<div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
+							<span class="heading-meta">Experience</span>
+							<h2 class="colorlib-heading animate-box">Work Experience</h2>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-md-12">
+							<div class="timeline-centered">
+								<article class="timeline-entry animate-box" data-animate-effect="fadeInLeft">
+									<div class="timeline-entry-inner">
+
+										<div class="timeline-icon color-1">
+											<i class="icon-pen2"></i>
+										</div>
+
+										<div class="timeline-label">
+											<h2><a href="https://ebiquity.umbc.edu" target="_blank">Semantic Web Researcher</a> <span>Present - 2019</span></h2>
+											<p>Researcher in Semantic Web and Smart Home Access Control, <a href="https://ebiquity.umbc.edu" target="_blank">Ebiquity Group</a>, <a href="https://www.umbc.edu" target="_blank">UMBC</a>, USA</p>
+											<p>Working on papers in domains of Semantic Web, Context-based Access Control and Smart Home Environments.</p>
+										</div>
+									</div>
+								</article>
+
+								<article class="timeline-entry animate-box" data-animate-effect="fadeInRight">
+									<div class="timeline-entry-inner">
+										<div class="timeline-icon color-2">
+											<i class="icon-pen2"></i>
+										</div>
+										<div class="timeline-label">
+											<h2><a href="https://www.tcs.com" target="_blank">Software Consultant and Data Analyst</a> <span>2018 - 2010</span></h2>
+											<p>Software Consultant and Data Analyst at <a href="https://www.tcs.com" target="_blank">Tata Consultancy Services (TCS) Ltd.</a>, India</p>
+											<p>I was a team leader and software developer working on Oracle Apps, Oracle Databases and Oracle Fusion Human Capital Management functionalities. I performed software design, development and testing activities on several client projects for TCS. I carried out all tasks in the Software Development Life Cycle starting from requirement analysis to software testing and maintenance.</p>
+										</div>
+									</div>
+								</article>
+
+								<article class="timeline-entry begin animate-box" data-animate-effect="fadeInBottom">
+									<div class="timeline-entry-inner">
+										<div class="timeline-icon color-none">
+										</div>
+									</div>
+								</article>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
+
+			<section class="colorlib-android" data-section="android">
+				<div class="colorlib-narrow-content">
+					<div class="row">
+						<div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
+							<span class="heading-meta">Experience</span>
+							<h2 class="colorlib-heading animate-box">Work Experience</h2>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-md-12">
+							<div class="timeline-centered">
+								<article class="timeline-entry animate-box" data-animate-effect="fadeInLeft">
+									<div class="timeline-entry-inner">
+
+										<div class="timeline-icon color-1">
+											<i class="icon-pen2"></i>
+										</div>
+
+										<div class="timeline-label">
+											<h2><a href="https://ebiquity.umbc.edu" target="_blank">Semantic Web Researcher</a> <span>Present - 2019</span></h2>
+											<p>Researcher in Semantic Web and Smart Home Access Control, <a href="https://ebiquity.umbc.edu" target="_blank">Ebiquity Group</a>, <a href="https://www.umbc.edu" target="_blank">UMBC</a>, USA</p>
+											<p>Working on papers in domains of Semantic Web, Context-based Access Control and Smart Home Environments.</p>
+										</div>
+									</div>
+								</article>
+
+								<article class="timeline-entry animate-box" data-animate-effect="fadeInRight">
+									<div class="timeline-entry-inner">
+										<div class="timeline-icon color-2">
+											<i class="icon-pen2"></i>
+										</div>
+										<div class="timeline-label">
+											<h2><a href="https://www.tcs.com" target="_blank">Software Consultant and Data Analyst</a> <span>2018 - 2010</span></h2>
+											<p>Software Consultant and Data Analyst at <a href="https://www.tcs.com" target="_blank">Tata Consultancy Services (TCS) Ltd.</a>, India</p>
+											<p>I was a team leader and software developer working on Oracle Apps, Oracle Databases and Oracle Fusion Human Capital Management functionalities. I performed software design, development and testing activities on several client projects for TCS. I carried out all tasks in the Software Development Life Cycle starting from requirement analysis to software testing and maintenance.</p>
+										</div>
+									</div>
+								</article>
+
+								<article class="timeline-entry begin animate-box" data-animate-effect="fadeInBottom">
+									<div class="timeline-entry-inner">
+										<div class="timeline-icon color-none">
+										</div>
+									</div>
+								</article>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
 
 			<section class="colorlib-skills" data-section="skills">
 				<div class="colorlib-narrow-content">
