--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
 
 					               <div class="timeline-label">
 					                  <h2><a href="https://ebiquity.umbc.edu" target="_blank">Semantic Web Researcher</a> <span>2020 - 2019</span></h2>
-									   <p>Researcher in Semantic Web and Smart Home Access Control, <a href="https://ebiquity.umbc.edu" target="_blank">Ebiquity Group</a>, <a href="https://www.umbc.edu" target="_blank">UMBC</a>, USA</p>
+									   <p>Graduate Student Researcher in Semantic Web and Smart Home Access Control, <a href="https://ebiquity.umbc.edu" target="_blank">Ebiquity Group</a>, <a href="https://www.umbc.edu" target="_blank">UMBC</a>, USA</p>
 									   <p>Performed research in Semantic Web, Context-based Access Control in Smart Homes and published a <a href="https://ebiquity.umbc.edu/paper/html/id/887/" target="_blank">paper</a> at IEEE Big Data Security 2020 conference.</p>
 					               </div>
 					            </div>
@@ -583,8 +583,8 @@
 				<div class="colorlib-narrow-content">
 					<div class="row">
 						<div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
-							<span class="heading-meta">Experience</span>
-							<h2 class="colorlib-heading animate-box">Work Experience</h2>
+							<span class="heading-meta">Android demos</span>
+							<h2 class="colorlib-heading animate-box">Demos for research</h2>
 						</div>
 					</div>
 					<div class="row">
@@ -593,27 +593,34 @@
 								<article class="timeline-entry animate-box" data-animate-effect="fadeInLeft">
 									<div class="timeline-entry-inner">
 
-										<div class="timeline-icon color-1">
+										<div class="timeline-icon color-2">
 											<i class="icon-pen2"></i>
 										</div>
 
 										<div class="timeline-label">
-											<h2><a href="https://ebiquity.umbc.edu" target="_blank">Semantic Web Researcher</a> <span>Present - 2019</span></h2>
-											<p>Researcher in Semantic Web and Smart Home Access Control, <a href="https://ebiquity.umbc.edu" target="_blank">Ebiquity Group</a>, <a href="https://www.umbc.edu" target="_blank">UMBC</a>, USA</p>
-											<p>Working on papers in domains of Semantic Web, Context-based Access Control and Smart Home Environments.</p>
+											<div class="embed-responsive embed-responsive-16by9">
+												<h2>Smart home controller app with rules demo</h2>
+												<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/DZq-oZ_Cv1g" allowfullscreen>
+													Smart home controller app with rules demo
+												</iframe>
+											</div>
 										</div>
 									</div>
 								</article>
 
 								<article class="timeline-entry animate-box" data-animate-effect="fadeInRight">
 									<div class="timeline-entry-inner">
-										<div class="timeline-icon color-2">
+
+										<div class="timeline-icon color-1">
 											<i class="icon-pen2"></i>
 										</div>
+
 										<div class="timeline-label">
-											<h2><a href="https://www.tcs.com" target="_blank">Software Consultant and Data Analyst</a> <span>2018 - 2010</span></h2>
-											<p>Software Consultant and Data Analyst at <a href="https://www.tcs.com" target="_blank">Tata Consultancy Services (TCS) Ltd.</a>, India</p>
-											<p>I was a team leader and software developer working on Oracle Apps, Oracle Databases and Oracle Fusion Human Capital Management functionalities. I performed software design, development and testing activities on several client projects for TCS. I carried out all tasks in the Software Development Life Cycle starting from requirement analysis to software testing and maintenance.</p>
+											<div class="embed-responsive embed-responsive-16by9">
+												<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/rOWJNGHVcHo" allowfullscreen>
+													Smart home controller app demo
+												</iframe>
+											</div>
 										</div>
 									</div>
 								</article>
