modified:   index.html

--- a/index.html
+++ b/index.html
@@ -116,11 +116,10 @@
 						<div class="col-md-12">
 							<div class="row row-bottom-padded-sm animate-box" data-animate-effect="fadeInLeft">
 								<div class="col-md-12">
-									<div class="about-desc">
+									<br class="about-desc">
 										<span class="heading-meta">About</span>
 										<h2 class="colorlib-heading">Who Am I?</h2>
-										<p><strong>Hi I'm Sofia Dutta</strong></br>I am an aspiring Data Scientist and Graduate Student at <a href="https://www.umbc.edu/" target="_blank">University of Maryland, Baltimore County</a>.</br>Currently, I am working as a Student Researcher at <a href="https://ebiquity.umbc.edu/" target="_blank">Ebiquity Ressearch Group</a>, supervised by <a href="https://www.csee.umbc.edu/~joshi/" target="_blank">Dr. Anupam Joshi</a>.</br>Before that, for seven years, I was a Software Developer and Data Analyst for <a href="https://www.tcs.com/" target="_blank">Tata Consultancy Services</a>.
-										</p>
+										<p><strong>Hi I'm Sofia Dutta</strong></br>A Data Scientist in the making, I currently work for <a href="https://newwave.io/" target="_blank">NewWave Telecom & Technologies, Inc.</a> as a Data Scientist Intern. At NewWave I am part of a team working on Machine Learning problems in their Medicaid Data Quality Assistant (MDQA) project from the healthcare domain.</br>I have worked on several Data Science, Machine Learning, and Deep Learning projects during my internship at NewWave and graduate studies at UMBC.</br>Previously, I used to work as a Software Developer and Data Analyst for <a href="https://www.tcs.com/" target="_blank">Tata Consultancy Services</a> from 2010 to 2018.</p>
 									</div>
 								</div>
 							</div>
