modified:   index.html

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 					   				<div class="slider-text-inner js-fullheight">
 					   					<div class="desc">
 						   					<h1>Hi! <br>I'm Sofia</h1>
-						   					<h2>A software developer with a knack for<br>data science, machine learning and deep learning!</h2>
+						   					<h2>A Data Scientist interested in working on<br>challenging problems in the machine learning, deep learning and data science domains!</h2>
 												<p><a class="btn btn-primary btn-learn" href="resume-sofia-dutta.pdf" target="_blank">Download Resume <i class="icon-download4"></i></a></p>
 											</div>
 					   				</div>
@@ -119,7 +119,7 @@
 									<br class="about-desc">
 										<span class="heading-meta">About</span>
 										<h2 class="colorlib-heading">Who Am I?</h2>
-										<p><strong>Hi I'm Sofia Dutta</strong></br>A Data Scientist in the making, I currently work for <a href="https://newwave.io/" target="_blank">NewWave Telecom & Technologies, Inc.</a> as a Data Scientist Intern. At NewWave I am part of a team working on Machine Learning problems in their Medicaid Data Quality Assistant (MDQA) project from the healthcare domain.</br>I have worked on several Data Science, Machine Learning, and Deep Learning projects during my internship at NewWave and graduate studies at UMBC.</br>Previously, I used to work as a Software Developer and Data Analyst for <a href="https://www.tcs.com/" target="_blank">Tata Consultancy Services</a> from 2010 to 2018.</p>
+									<strong>My name is Sofia Dutta,</strong> a Data Scientist in the making, I currently work for <a href="https://newwave.io/" target="_blank">NewWave Telecom & Technologies, Inc.</a> as a <i><u>Data Scientist Intern.</u></i> At NewWave, I am part of a team working on Machine Learning problems in their Medicaid Data Quality Assistant (MDQA) project from the healthcare domain.</br></br>I have worked on several Data Science, Machine Learning, and Deep Learning projects during my internship at NewWave and graduate studies at UMBC.</br></br>	Previously, I used to work as a Software Developer and Data Analyst for <a href="https://www.tcs.com/" target="_blank">Tata Consultancy Services</a> from 2010 to 2018.</p>
 									</div>
 								</div>
 							</div>
@@ -132,8 +132,8 @@
 								</div>
 								<div class="col-md-4 animate-box" data-animate-effect="fadeInLeft">
 									<div class="services color-1">
-										<span class="icon2"><i class="icon-data"></i></span>
-										<h3>Big Data Analytics</h3>
+										<span class="icon2"><i class="icon-lightbulb"></i></span>
+										<h3>Deep Learning</h3>
 									</div>
 								</div>
 								<div class="col-md-4 animate-box" data-animate-effect="fadeInRight">
