--- a/index.html
+++ b/index.html
@@ -116,10 +116,10 @@
 						<div class="col-md-12">
 							<div class="row row-bottom-padded-sm animate-box" data-animate-effect="fadeInLeft">
 								<div class="col-md-12">
-									<br class="about-desc">
+									<div class="about-desc">
 										<span class="heading-meta">About</span>
 										<h2 class="colorlib-heading">Who Am I?</h2>
-									<strong>My name is Sofia Dutta,</strong> a Data Scientist in the making, I currently work for <a href="https://newwave.io/" target="_blank">NewWave Telecom & Technologies, Inc.</a> as a <i><u>Data Scientist Intern.</u></i> At NewWave, I am part of a team working on Machine Learning problems in their Medicaid Data Quality Assistant (MDQA) project from the healthcare domain.</br></br>I have worked on several Data Science, Machine Learning, and Deep Learning projects during my internship at NewWave and graduate studies at UMBC.</br></br>	Previously, I used to work as a Software Developer and Data Analyst for <a href="https://www.tcs.com/" target="_blank">Tata Consultancy Services</a> from 2010 to 2018.</p>
+										<strong>My name is Sofia Dutta,</strong> a Data Scientist in the making, I currently work for <a href="https://newwave.io/" target="_blank">NewWave Telecom & Technologies, Inc.</a> as a <i><u>Data Scientist Intern.</u></i> At NewWave, I am part of a team working on Machine Learning problems in their Medicaid Data Quality Assistant (MDQA) project from the healthcare domain.</br></br>I have worked on several Data Science, Machine Learning, and Deep Learning projects during my internship at NewWave and graduate studies at UMBC.</br></br>	Previously, I used to work as a Software Developer and Data Analyst for <a href="https://www.tcs.com/" target="_blank">Tata Consultancy Services</a> from 2010 to 2018.</p>
 									</div>
 								</div>
 							</div>
