--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
 							<div class="progress-wrap">
 								<h3>Knowledge Graph, OWL, SPARQL</h3>
 								<div class="progress">
-									<div class="progress-bar color-14" role="progressbar" aria-valuenow="75"
+									<div class="progress-bar color-7" role="progressbar" aria-valuenow="75"
 										 aria-valuemin="0" aria-valuemax="100" style="width:75%">
 										<span>75%</span>
 									</div>
@@ -443,6 +443,72 @@
 						</div>
 					</div>
 					<div class="row row-pt-md">
+						<div class="col-md-4 text-center animate-box">
+							<div class="services color-7">
+								<span class="icon">
+									<i class="icon-lightbulb"></i>
+								</span>
+								<div class="desc">
+									<h3>PyTorch project</h3>
+									<p><a href="datascience-ipynbs/pytorch/Sentiment-Analysis-using-PyTorch.html" target="_blank">Sentiment Analysis using PyTorch</a></p>
+								</div>
+							</div>
+						</div>
+						<div class="col-md-4 text-center animate-box">
+							<div class="services color-7">
+								<span class="icon">
+									<i class="icon-lightbulb"></i>
+								</span>
+								<div class="desc">
+									<h3>PyTorch project</h3>
+									<p><a href="datascience-ipynbs/pytorch/Image-Classification-using-PyTorch.html" target="_blank">Image classification using PyTorch</a></p>
+								</div>
+							</div>
+						</div>
+						<div class="col-md-4 text-center animate-box">
+							<div class="services color-7">
+								<span class="icon">
+									<i class="icon-lightbulb"></i>
+								</span>
+								<div class="desc">
+									<h3>PyTorch project</h3>
+									<p><a href="datascience-ipynbs/pytorch/CycleGAN_Img_Translation_PyTorch_Horse2Zebra.html" target="_blank">Horse2Zebra Image translation using CycleGAN</a></p>
+								</div>
+							</div>
+						</div>
+						<div class="col-md-4 text-center animate-box">
+							<div class="services color-7">
+								<span class="icon">
+									<i class="icon-lightbulb"></i>
+								</span>
+								<div class="desc">
+									<h3>PyTorch project</h3>
+									<p><a href="datascience-ipynbs/pytorch/CycleGAN_Img_Translation_PyTorch_Orange2Apple.html" target="_blank">Orange2Apple Image translation using CycleGAN</a></p>
+								</div>
+							</div>
+						</div>
+						<div class="col-md-4 text-center animate-box">
+							<div class="services color-7">
+								<span class="icon">
+									<i class="icon-lightbulb"></i>
+								</span>
+								<div class="desc">
+									<h3>PyTorch project</h3>
+									<p><a href="datascience-ipynbs/pytorch/WGAN.html" target="_blank">Image generation using WGAN</a></p>
+								</div>
+							</div>
+						</div>
+						<div class="col-md-4 text-center animate-box">
+							<div class="services color-7">
+								<span class="icon">
+									<i class="icon-lightbulb"></i>
+								</span>
+								<div class="desc">
+									<h3>PyTorch project</h3>
+									<p><a href="datascience-ipynbs/pytorch/Denoising-Autoencoder.html" target="_blank">Image reconstruction using Denoising Autoencoder</a></p>
+								</div>
+							</div>
+						</div>
 						<div class="col-md-4 text-center animate-box">
 							<div class="services color-1">
 								<span class="icon">
