modified:   index.html

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 					   				<div class="slider-text-inner js-fullheight">
 					   					<div class="desc">
 						   					<h1>Hi! <br>I'm Sofia</h1>
-						   					<h2>A Data Scientist interested in working on<br>challenging problems in the machine learning, deep learning and data science domains!</h2>
+						   					<h2>A Data Scientist, interested in working on<br>challenging problems in the machine learning, deep learning and data science domains!</h2>
 												<p><a class="btn btn-primary btn-learn" href="resume-sofia-dutta.pdf" target="_blank">Download Resume <i class="icon-download4"></i></a></p>
 											</div>
 					   				</div>
@@ -230,7 +230,7 @@
 					</div>
 					<div class="row">
 						<div class="col-md-12 animate-box" data-animate-effect="fadeInLeft">
-							<p>I am a Data Scientist with extensive experience in Data Analysis, Machine Learning and Software Development.</p>
+							<p>I am a Data Scientist with experience in Data Analysis, Machine Learning and Software Development.</p>
 						</div>
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
 							<div class="progress-wrap">
