modified:   index.html

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 					   					<div class="desc">
 						   					<h1>Hi! <br>I'm Sofia</h1>
 											<h2>A Software/Data Engineer and</br>a Data Scientist, interested in working</br>on challenging problems around data</br>and what we can do with it!</h2>
-												<p><a class="btn btn-primary btn-learn" href="resume-sofia-dutta.pdf" target="_blank">Download Resume <i class="icon-download4"></i></a></p>
+												<p><a class="btn btn-primary btn-learn" href="sofia-dutta-resume.pdf" target="_blank">Download Resume <i class="icon-download4"></i></a></p>
 											</div>
 					   				</div>
 					   			</div>
