modified:   index.html

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 					               <div class="timeline-label">
 					               	<h2><a href="https://newwave.io/" target="_blank">Data Scientist Intern</a> <span>Present - 2020</span></h2>
 									   <p>Data Scientist Intern at <a href="https://newwave.io/" target="_blank">NewWave Telecom and Technologies, Inc.</a>, Woodlawn, MD, USA</p>
-									   <p>Working on Data Science project building machine learning models and carrying out data analysis tasks on Centers for Medicare & Medicaid Services (CMS) healthcare claims data. Building a data exploration platform using cloud-based tools like LookML, proprietary software from Looker. Running simulations using models to test the effectiveness of different courses of action.</p>
+									   <p>Working on a Data Science project building rules-based machine learning errordetection models to carry out data quality analysis tasks on Centers for Medicare & Medicaid Services (CMS) healthcare claims data. Instrumental in building a data exploration platform using cloud-based tools like LookML, software from Looker. Created visualizations of customer data to provide the best actions when choosing a data quality improvement algorithm.</p>
 					               </div>
 					            </div>
 					         </article>
