modified:   index.html

--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@
 									    </div>
 									    <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
 									         <div class="panel-body">
-												 <p><strong>2020 - 2019</strong></br>Working on my Master's in Data Science from <a href="https://umbc.edu" target="_blank">University of Maryland, Baltimore County</a>, Baltimore, USA. GPA: <strong>4.0</strong>!</br>See transcript <a href="assets/ds_transcript.pdf" target="_blank">here</a>.</p>
+												 <p><strong>2020 - 2019</strong></br>Working on my Master's in Data Science from <a href="https://umbc.edu" target="_blank">University of Maryland, Baltimore County</a>, Baltimore, USA. GPA: <strong>4.0</strong>!</br>See transcript <a href="assets/transcript-sofia-dutta.pdf" target="_blank">here</a>.</p>
 									         </div>
 									    </div>
 									</div>
