--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
 					               </div>
 					               <div class="timeline-label">
 					               	<h2><a href="https://www.tcs.com" target="_blank">Software Developer and Data Analyst</a> <span>2018 - 2010</span></h2>
-									   <p>Software Consultant and Data Analyst at <a href="https://www.tcs.com" target="_blank">Tata Consultancy Services (TCS) Ltd.</a>, India</p>
+									   <p>Software Developer and Data Analyst at <a href="https://www.tcs.com" target="_blank">Tata Consultancy Services (TCS) Ltd.</a>, India</p>
 									   <p>I was a team leader and software developer working on Oracle Apps, Oracle Databases and Oracle Fusion Human Capital Management functionalities. I performed software design, development and testing activities on several client projects for TCS. I carried out all tasks in the Software Development Life Cycle starting from requirement analysis to software testing and maintenance.</p>
 					               </div>
 					            </div>
