--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 								<div class="col-md-12 animate-box" data-animate-effect="fadeInLeft">
 									<div class="hire">
 										<h3>Master's in Data Science with a <strong>4.0</strong> GPA!</h3>
-										<a href="mailto:sofiad1@umbc.edu" target="_blank" class="btn-hire">Hire me</a>
+										<a href="mailto:sofia.dutta17@gmail.com" target="_blank" class="btn-hire">Hire me</a>
 									</div>
 								</div>
 							</div>
@@ -717,7 +717,7 @@
 									<i class="icon-mail6"></i>
 								</div>
 								<div class="colorlib-text">
-									<p><a href="mailto:sofiad1@umbc.edu" target="_blank">sofiad1@umbc.edu</a></p>
+									<p><a href="mailto:sofia.dutta17@gmail.com" target="_blank">sofia.dutta17@gmail.com</a></p>
 								</div>
 							</div>
 
